# project-weather-station

./: .gitignore  README.md  WowkiImplementation.md  platformio.ini  project-weather-station-steps.txt  weather-station.drawio
.github/workflows/: cmake-single-platform.yml
cmake-kconfig/: .cmake.dotconfig.checksum  .config  .config.old  CMakeCache.txt  Kconfig  Makefile  cmake_install.cmake
cmake-kconfig/cmake/: top.cmake
cmake-kconfig/kconfig/: sources.txt
include/: autoconf.h
include/interface/: DisplayInterface.h  NetworkInterface.h  SensorInterface.h  SerialInterface.h  StorageInterface.h  TimeInterface.h
src/: WeatherStation.cpp  WeatherStation.h  main.cpp
src/drivers/dummy/: Sensor_Dummy.cpp  Sensor_Dummy.h  Time_Dummy.cpp  Time_Dummy.h
src/drivers/esp32/: Display_SSD1306.cpp  Display_SSD1306.h  Network_WiFi.cpp  Network_WiFi.h  Sensor_AHT10.cpp  Sensor_AHT10.h  Sensor_BME280.cpp  Sensor_BME280.h  Sensor_DHT11.cpp  Sensor_DHT11.h  Sensor_DHT22.cpp  Sensor_DHT22.h  Serial_UART.cpp  Serial_UART.h  Storage_LittleFS.cpp  Storage_LittleFS.h  Time_DS3231.cpp  Time_DS3231.h
src/drivers/linux/: Storage_Linux.cpp  Storage_Linux.h
src/systems/: Configurator.cpp  Configurator.h  Formatter.cpp  Formatter.h  Settings.cpp  Settings.h  WeatherStation.cpp  WeatherStation.h
test/: CMakeLists.txt  TestConfigurator.cpp  TestFormatter.cpp  TestSettings.cpp  test.cpp
